server/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-server
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: server-service
                port:
                  number: 5000
